--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
             <h1>Welcome To</h1>
             <h1>Ayman Ahmed World</h1>
             <h3>Learn <span class="orange-color">web development</span></h3>
-            <p>Welcome to the MDN learning area. This set of articles aims to guide complete beginners to web
+            <p class="door">Welcome to the MDN learning area. This set of articles aims to guide complete beginners to
+                web
                 development
                 with
                 all that they need to start coding websites.The aim of this area of MDN is not to take you from
@@ -34,7 +35,7 @@
                 Here</a>
         </div>
         <div class="half-width">
-            <img class="images" src="images/my-bg (1).png" alt="">
+            <img class="images down" src="images/my-bg (1).png" alt="">
         </div>
     </section>
     <section class="dream-big flexible-container">
@@ -44,7 +45,8 @@
         <div class=" half-width">
             <h1>Dream Big </h1>
             <h3>Become <span class=" orange-color">web developer</span> </h3>
-            <p>Explore our growing collection of courses on key web design and development subjects. An industry expert
+            <p class="door">Explore our growing collection of courses on key web design and development subjects. An
+                industry expert
                 has written each course, helped by members of the Chrome team. Follow the modules sequentially, or dip
                 into the topics you most want to learn about.</p>
             <a class="link-button" target=”_blank” href="https://fonts.google.com/specimen/Poppins?query=poppins">Touch
